[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["patrikkj <patrik97@hotmail.no>"]
description = ""
name = "algorithms"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
survival = "^0.0.6"
sklearn = "^0.0.0"
[tool.poetry.dev-dependencies]
